--- a/public/sample.html
+++ b/public/sample.html
@@ -421,7 +421,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background: linear-gradient(to right, #4d1f7f, #254a8b);
+    background: #87CEEB;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed; 
