--- a/public/sample.html
+++ b/public/sample.html
@@ -659,19 +659,19 @@ header{
 <body>
 <div id="content">
 
-<div id="global-content">
-  <h2 id="global-sentence" style=color: darkslateblue;>TALKFREE</h2>
+<div id="global-content" style="background: darkslateblue;">
+  <h2 id="global-sentence">TALKFREE</h2>
 </div>
 
 
 <div class="container">
 
   <div class="top-controls">
-    <button id="space" class="btn btn-primary" style="background-color: #87CEEB; color: darkslateblue;">Space</button>
-    <button id="clear" class="btn btn-primary" style="background-color: #87CEEB; color: darkslateblue;">Clear All</button>
-    <button id="backspace" class="btn btn-primary"style="background-color: #87CEEB; color: darkslateblue;">Backspace </button>
-    <button id="model-change" class="btn btn-primary"style="background-color: #87CEEB; color: darkslateblue;">Gesture Model</button>
-    <button class="btn btn-primary" id="camera-switch"style="background-color: #87CEEB; color: darkslateblue;">Camera Off</button>
+    <button id="space" class="btn btn-primary" style="background-color: darkslateblue;; color: #87CEEB;">Space</button>
+    <button id="clear" class="btn btn-primary" style="background-color: darkslateblue;; color: #87CEEB;">Clear All</button>
+    <button id="backspace" class="btn btn-primary"style="background-color: darkslateblue;; color: #87CEEB;">Backspace </button>
+    <button id="model-change" class="btn btn-primary"style="background-color: darkslateblue; color: #87CEEB;">Gesture Model</button>
+    <button class="btn btn-primary" id="camera-switch"style="background-color: darkslateblue; color: #87CEEB;">Camera Off</button>
 
 
   </div>
@@ -682,7 +682,7 @@ header{
     <canvas class="output_canvas" width="640px" height="480px" style="border-style: double; height: 63vh; width: 60vw;"></canvas>
 </div>
 
-<div class="model-controls">
+<div class="model-controls" style="background: darkslateblue;>
     <h3 id="label">Label Here.</h3>
 </div>
 </div> 
