--- a/public/sample.html
+++ b/public/sample.html
@@ -659,8 +659,8 @@ header{
 <body>
 <div id="content">
 
-<div id="global-content" style="background: darkslateblue;">
-  <h2 id="global-sentence">TALKFREE</h2>
+<div id="global-content">
+  <h2 id="global-sentence" style="background: darkslateblue; color: white;">TALKFREE</h2>
 </div>
 
 
@@ -682,8 +682,8 @@ header{
     <canvas class="output_canvas" width="640px" height="480px" style="border-style: double; height: 63vh; width: 60vw;"></canvas>
 </div>
 
-<div class="model-controls" style="background: darkslateblue;>
-    <h3 id="label">Label Here.</h3>
+<div class="model-controls">
+    <h3 id="label" style="background: darkslateblue; color: white;>Label Here.</h3>
 </div>
 </div> 
 </body>
