--- a/public/sample.html
+++ b/public/sample.html
@@ -660,7 +660,7 @@ header{
 <div id="content">
 
 <div id="global-content">
-  <h2 id="global-sentence" style="background: darkslateblue; color: white;">TALKFREE</h2>
+  <h2 id="global-sentence" style="background: #50C878; color: white; border-style: solid">TALKFREE</h2>
 </div>
 
 
@@ -683,7 +683,7 @@ header{
 </div>
 
 <div class="model-controls">
-    <h3 id="label" style="background: darkslateblue; color: white;>Label Here.</h3>
+    <h3 id="label" style="background: #50C878; color: white; border-style: solid;">Label Here.</h3>
 </div>
 </div> 
 </body>
