--- a/public/sample.html
+++ b/public/sample.html
@@ -660,7 +660,7 @@ header{
 <div id="content">
 
 <div id="global-content">
-  <h2 id="global-sentence" style="background: #50C878; color: white; border-style: solid">TALKFREE</h2>
+  <h2 id="global-sentence" style="background: #50C878; color: white; border-style: solid; aligned-items:center; width: 5em;">TALKFREE</h2>
 </div>
 
 
