--- a/public/sample.html
+++ b/public/sample.html
@@ -659,8 +659,8 @@ header{
 <body>
 <div id="content">
 
-<div id="global-content">
-  <h2 id="global-sentence" style="background: #50C878; color: white; border-style: solid; aligned-items:center; width: 5em;">TALKFREE</h2>
+<div id="global-content" style="background: #50C878; color: white; border-style: solid; aligned-items:center;">
+  <h2 id="global-sentence">TALKFREE</h2>
 </div>
 
 
